--- a/test-kdh/src/main/resources/application.properties
+++ b/test-kdh/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=test-kdh
 # 데이터 소스 - MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/aloha?serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true&useSSL=false&autoReconnection=true&autoReconnection=true
-spring.datasource.username=joeun
+spring.datasource.username=aloha
 spring.datasource.password=123456
 
 # Mybatis 설정
